[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip", "deflate"] }
tokio = {version = "1", features = ["full"]}
serde_json = "1"
serde = { version = "1.0.152", features = ["derive"] }


actix-web = "4"
actix-files = "0.6.2"

handlebars = { version = "4.3.7", features = ["dir_source"] }